--- a/styles/all/template/event/posting_editor_subject_before.html
+++ b/styles/all/template/event/posting_editor_subject_before.html
@@ -1,4 +1,4 @@
- <!-- IF S_SIMILARTOPIC_SHOW  --> 
- <div class = 'ls_similartopics'> </div>
- <!-- ENDIF  -->
+ {% if S_SIMILARTOPIC_SHOW %} 
+ <div class = 'ls-similartopics'> </div>
+ {% endif %}
 
