--- a/styles/all/template/event/mcp_ban_username_prepend.html
+++ b/styles/all/template/event/mcp_ban_username_prepend.html
@@ -1,6 +1,7 @@
-{% if S_GROUP_MANAGE %}
+ {% if MCP_BANE %}
     <div style="text-align: left; display:inline-block;">
         <label for="usersearch_ls">{{ lang('LIVE_SEARCH_CAPTION') }}{{ lang('COLON') }}</label>
         <input id="usersearch_ls" class="inputbox search " type='search'   placeholder="{{ lang('LIVESEARCH_USER_TXT') }}"  title="{{ lang('LIVESEARCH_USER_T') }}" autocomplete="off" />
     </div>
-{% endif %}
+    {% endif %}
+
