--- a/styles/all/template/event/overall_footer_after.html
+++ b/styles/all/template/event/overall_footer_after.html
@@ -1,62 +1,66 @@
-<script type="text/javascript" >
-    var S_FORUM_ID = '{S_FORUM_ID}';
-    var S_TOPIC_ID = '{S_TOPIC_ID}';
-    var S_CANONICAL_TOPIC_TYPE = '{S_CANONICAL_TOPIC_TYPE}';
-    var minChars_forum = '{MIN_CHARS_FORUM}';
+{% if S_LIVE_SEARCH  %}
+	<script >
+		var S_FORUM_ID = '{{ S_FORUM_ID }}';
+		var S_TOPIC_ID = '{{ S_TOPIC_ID }}';
+		var S_CANONICAL_TOPIC_TYPE = '{{ S_CANONICAL_TOPIC_TYPE }}';
+		var minChars_forum = '{{ MIN_CHARS_FORUM }}';
 
-    var U_FORUM_LS_PATH = '{U_FORUM_LS_PATH}';
-    var U_TOPIC_LS_PATH = '{U_TOPIC_LS_PATH}';
-    var U_SIMILARTOPIC_LS_PATH = '{U_SIMILARTOPIC_LS_PATH}';
-    var U_USER_LS_PATH = '{U_USER_LS_PATH}';
-    var U_USERTOPIC_LS_PATH = '{U_USERTOPIC_LS_PATH}';
-    var U_USERPOST_LS_PATH = '{U_USERPOST_LS_PATH}';
-    var U_USER_PM_LS_PATH = '{U_USER_PM_LS_PATH}';
-    var U_MEMBERLIST_LS_PATH = '{U_MEMBERLIST_LS_PATH}';
-    var U_UCP_LS_PATH = '{U_UCP_LS_PATH}';
+		var U_FORUM_LS_PATH = '{{ U_FORUM_LS_PATH }}';
+		var U_TOPIC_LS_PATH = '{{ U_TOPIC_LS_PATH }}';
+		var U_SIMILARTOPIC_LS_PATH = '{{ U_SIMILARTOPIC_LS_PATH }}';
+		var U_USER_LS_PATH  = '{{ U_USER_LS_PATH }}';
+		var U_USERTOPIC_LS_PATH = '{{ U_USERTOPIC_LS_PATH }}';
+		var U_USERPOST_LS_PATH = '{{ U_USERPOST_LS_PATH }}';
+		var U_USER_PM_LS_PATH = '{{ U_USER_PM_LS_PATH }}';
+		var U_MEMBERLIST_LS_PATH = '{{ U_MEMBERLIST_LS_PATH }}';
+		var U_UCP_LS_PATH = '{{ U_UCP_LS_PATH }}';
 
-    var U_PROFILE_LS_PATH = '{U_PROFILE_LS_PATH}';
-    var U_PM_LS_PATH = '{U_PM_LS_PATH}';
-    var U_MAIL_LS_PATH = '{U_MAIL_LS_PATH}';
-    var U_JABBER_LS_PATH = '{U_JABBER_LS_PATH}';
+		var U_PROFILE_LS_PATH = '{{ U_PROFILE_LS_PATH }}';
+		var U_PM_LS_PATH = '{{ U_PM_LS_PATH }}';
+		var U_MAIL_LS_PATH = '{{ U_MAIL_LS_PATH }}';
+		var U_JABBER_LS_PATH = '{{ U_JABBER_LS_PATH }}';
 
 
-    var U_FORUM_REDIRECT = '{U_FORUM_REDIRECT}';
-    var U_TOPIC_REDIRECT = '{U_TOPIC_REDIRECT}';
+		var U_FORUM_REDIRECT = '{{ U_FORUM_REDIRECT }}';
+		var U_TOPIC_REDIRECT = '{{ U_TOPIC_REDIRECT }}';
 
-    var minChars_topic = '{MIN_CHARS_TOPIC}';
-    var minChars_user = '{MIN_CHARS_USER}';
+		var minChars_topic = '{{ MIN_CHARS_TOPIC }}';
+		var minChars_user = '{{ MIN_CHARS_USER }}';
 
-    var maxItemsToShow_forum = '{MAX_ITEMS_TO_SHOW_FORUM}';
-    var maxItemsToShow_topic = '{MAX_ITEMS_TO_SHOW_TOPIC}';
-    var maxItemsToShow_user = '{MAX_ITEMS_TO_SHOW_USER}';
+		var maxItemsToShow_forum = '{{ MAX_ITEMS_TO_SHOW_FORUM }}';
+		var maxItemsToShow_topic = '{{ MAX_ITEMS_TO_SHOW_TOPIC }}';
+		var maxItemsToShow_user = '{{ MAX_ITEMS_TO_SHOW_USER }}';
 
-    var LIVE_SEARCH_SHOW_IN_NEW_WINDOW = '{LIVE_SEARCH_SHOW_IN_NEW_WINDOW}';
-    var LIVE_SEARCH_USE_EYE_BUTTON = '{LIVE_SEARCH_USE_EYE_BUTTON}';
-    var LIVE_SEARCH_EYE_BUTTON_OPEN_T = '{LIVE_SEARCH_EYE_BUTTON_OPEN_T}';
-    var LIVE_SEARCH_EYE_BUTTON_CLOSE_T = '{LIVE_SEARCH_EYE_BUTTON_CLOSE_T}';
-    var LIVE_SEARCH_HIDE_AFTER_SELECT = '{LIVE_SEARCH_HIDE_AFTER_SELECT}';
+		var LIVE_SEARCH_SHOW_IN_NEW_WINDOW = '{{ LIVE_SEARCH_SHOW_IN_NEW_WINDOW }}';
+		var LIVE_SEARCH_USE_EYE_BUTTON = '{{ LIVE_SEARCH_USE_EYE_BUTTON }}';
+		var LIVE_SEARCH_EYE_BUTTON_OPEN_T = '{{ LIVE_SEARCH_EYE_BUTTON_OPEN_T }}';
+		var LIVE_SEARCH_EYE_BUTTON_CLOSE_T = '{{ LIVE_SEARCH_EYE_BUTTON_CLOSE_T }}';
+		var LIVE_SEARCH_HIDE_AFTER_SELECT = '{{ LIVE_SEARCH_HIDE_AFTER_SELECT }}';
 
-    //MCP
-    var L_LIVE_SEARCH_YOU_SELECTED_TOPIC = '{L_LIVE_SEARCH_YOU_SELECTED_TOPIC}';
-    var L_LIVESEARCH_USER_TXT = '{L_LIVESEARCH_USER_TXT}';
-    var L_LIVESEARCH_USER_T = '{L_LIVESEARCH_USER_T}';
-    var LIVE_SEARCH_MAX_ITEMS_TO_SHOW_MCP = '{LIVE_SEARCH_MAX_ITEMS_TO_SHOW_MCP}';
-    var LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_MCP = '{LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_MCP}';
-    var S_SIMILARTOPIC_SHOW = '{S_SIMILARTOPIC_SHOW}';
-    var S_LIVESEARCH_MCP = '{S_LIVESEARCH_MCP}';
-    var MCP_POST_DETAILS = '{MCP_POST_DETAILS}';
-    var MCP_USER_NOTES = '{MCP_USER_NOTES}';
-    var MCP_BAN = '{MCP_BAN}';
-    var MCP_TOPIC_VIEW = '{MCP_TOPIC_VIEW}';
-    var MCP_TOPIC_MOVE = '{MCP_TOPIC_MOVE}';
-    //alert(MCP_TOPIC_MOVE);
-</script>
-<!-- INCLUDEJS @alg_liveSearch/jquery.autocomplete.js -->
-<!-- INCLUDEJS @alg_liveSearch/hoverIntent.minified.js -->
-<!-- IF LIVE_SEARCH_USE_EYE_BUTTON --> 
-    <!-- INCLUDEJS @alg_liveSearch/../jquery.eye/jquery.eye.js -->
-    <!-- INCLUDECSS @alg_liveSearch/../jquery.eye/jquery.eye.css -->
-<!-- ENDIF  -->
-<!-- INCLUDEJS @alg_liveSearch/live_search.js -->
+		//MCP
+		var L_LIVE_SEARCH_YOU_SELECTED_TOPIC = '{{ lang("LIVE_SEARCH_YOU_SELECTED_TOPIC") }}';
+		var L_LIVESEARCH_USER_TXT = '{{ lang("LIVESEARCH_USER_TXT") }}';
+		var L_LIVESEARCH_USER_T = '{{ lang("LIVESEARCH_USER_T") }}';
+		var LIVE_SEARCH_MAX_ITEMS_TO_SHOW_MCP = '{{ LIVE_SEARCH_MAX_ITEMS_TO_SHOW_MCP }}';
+		var LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_MCP = '{{ LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_MCP }}';
+		var S_SIMILARTOPIC_SHOW = '{{ S_SIMILARTOPIC_SHOW }}';
+		var S_LIVESEARCH_MCP = '{{ S_LIVESEARCH_MCP }}';
+		var MCP_POST_DETAILS = '{{ MCP_POST_DETAILS }}';
+		var MCP_USER_NOTES = '{{ MCP_USER_NOTES }}';
+		var MCP_BAN = '{{ MCP_BAN }}';
+		var MCP_TOPIC_VIEW = '{{ MCP_TOPIC_VIEW }}';
+		var MCP_TOPIC_MOVE = '{{ MCP_TOPIC_MOVE }}';
+		//alert(MCP_TOPIC_MOVE);
+	</script>
+	{% INCLUDEJS '@alg_liveSearch/jquery.autocomplete.js' %}
+	{% INCLUDEJS '@alg_liveSearch/hoverIntent.minified.js' %}
+	{#  INCLUDEJS @alg_liveSearch/jquery.autocomplete.js > #}
+	{#  INCLUDEJS @alg_liveSearch/hoverIntent.minified.js --> #}
+	{% if LIVE_SEARCH_USE_EYE_BUTTON %}
+		{% INCLUDEJS '@alg_liveSearch/../jquery.eye/jquery.eye.js' %}
+		{%  INCLUDECSS '@alg_liveSearch/../jquery.eye/jquery.eye.css' %}
+	{% endif %}
+	{% INCLUDEJS '@alg_liveSearch/live_search.js' %}
+{% endif %}
 
  
