--- a/styles/all/template/event/overall_header_head_append.html
+++ b/styles/all/template/event/overall_header_head_append.html
@@ -1,6 +1,5 @@
-
-<!-- INCLUDECSS @alg_liveSearch/jquery.autocomplete.css -->
-<!-- INCLUDECSS @alg_liveSearch/live_search.css -->
-<!-- INCLUDECSS @alg_liveSearch/../jquery.eye/jquery.eye.css -->
-
-
+{% if S_LIVE_SEARCH  %}
+	{% INCLUDECSS '@alg_liveSearch/jquery.autocomplete.css' %}
+	{% INCLUDECSS '@alg_liveSearch/live_search.css' %}
+	{% INCLUDECSS '@alg_liveSearch/../jquery.eye/jquery.eye.css' %}
+{% endif %}
